feat: NewsFlow OS - Deploy inicial
- Sistema completo de gestão editorial
- Canvas de workflow interativo (React Flow)
- CRM comercial com pipeline
- Organograma interativo (OrgCanvas)
- Brand Hub - Repositório de assets
- Sistema de feedback (FeedbackFAB)
- Dashboard Master com métricas
- Tracker & Time Tracking (MyWork)
- Integração Supabase completa
- Deploy configurado para Vercel
- UI/UX Light Precision Design System
- 100% em Português
- 16 rotas ativas
- 28 componentes React
- 18 serviços TypeScript

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ dist-ssr
 *.sln
 *.sw?
 .vercel
+
+# Supabase - Service Role Keys (CRÍTICO: nunca commitar)
+*service*role*
+*SERVICE*ROLE*
+*service_role*
+*SERVICE_ROLE*
