--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "check-schema": "npx ts-node scripts/check-db-schema.ts",
     "dry-run": "npx ts-node scripts/dry-run-check.ts",
-    "prebuild": "npm run check-schema",
-    "build": "tsc && vite build",
+    "validate-env": "node scripts/validate-env.js",
+    "prebuild": "npm run validate-env",
+    "build": "tsc --noEmit && vite build",
+    "build:ci": "vite build",
     "preview": "vite preview",
     "deploy": "npm run dry-run && vercel --prod",
+    "deploy:ci": "npm run build:ci && vercel --prod",
     "simulate": "npx ts-node scripts/full-simulation.ts"
   },
   "dependencies": {
