--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dry-run": "npx ts-node scripts/dry-run-check.ts",
     "validate-env": "node scripts/validate-env.js",
     "prebuild": "npm run validate-env",
-    "build": "tsc --noEmit && vite build",
+    "build": "vite build",
     "build:ci": "vite build",
     "preview": "vite preview",
     "deploy": "npm run dry-run && vercel --prod",
