--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "simulate": "npx ts-node scripts/full-simulation.ts"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/react": "^6.1.20",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.90.0",
